--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		
 		<script src="scripts.js"></script>
+		<script src="arrays.js"></script>
 
 	</head>	
 	<body>
